# TradingAgents

./: .gitignore  CLAUDE.md  pyproject.toml
cli/: main.py  utils.py
docs/: architecture.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
tests/: test_a_stock_analyst_factories.py  test_a_stock_benchmark_map.py  test_a_stock_graph_wiring.py  test_a_stock_vendor.py  test_anthropic_effort.py  test_claude_subscription_client.py  test_codex_client.py  test_quality_gate.py
tradingagents/: default_config.py
tradingagents/agents/: __init__.py
tradingagents/agents/analysts/: hot_money_tracker.py
tradingagents/agents/utils/: agent_states.py  agent_utils.py
tradingagents/dataflows/: a_stock.py  interface.py
tradingagents/graph/: propagation.py  setup.py  trading_graph.py
tradingagents/llm_clients/: anthropic_client.py  api_key_env.py  claude_auth.py  claude_subscription_client.py  codex_auth.py  codex_client.py  factory.py  model_catalog.py  validators.py
