[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingagents"
version = "0.2.5"
description = "TradingAgents: Multi-Agents LLM Financial Trading Framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # LangChain 1.x / LangGraph 1.x is a breaking redesign (the prebuilt
    # module no longer ships ToolNode, message routing API changed).
    # Pin to the 0.x line until we land a migration; without an upper
    # bound a fresh `pip install` silently breaks the import chain.
    "langchain-core>=0.3.81,<1.0",
    "backtrader>=1.9.78.123",
    "langchain-anthropic>=0.3.15,<1.0",
    "langchain-experimental>=0.3.4,<0.4",
    "langchain-google-genai>=2.0,<3.0",
    "langchain-openai>=0.3.23,<1.0",
    "langgraph>=0.4.8,<1.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "pandas>=2.3.0",
    "parsel>=1.10.0",
    "pytz>=2025.2",
    "questionary>=2.1.0",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "typer>=0.21.0",
    "setuptools>=80.9.0",
    "stockstats>=0.6.5",
    "tqdm>=4.67.1",
    "typing-extensions>=4.14.0",
    "yfinance>=0.2.63",
]

[project.optional-dependencies]
# A-stock (mainland China) data vendor: install with `pip install ".[a_stock]"`.
# mootdx provides TCP access to broker quote servers (OHLCV + F10);
# akshare wraps free Chinese data sources (sina/eastmoney/同花顺/百度) for
# news, financial statements, dragon-tiger board, lockup expiries, etc.
a_stock = [
    "mootdx>=0.11.0",
    "akshare>=1.16.0",
    "python-dateutil>=2.8.2",
]

[project.scripts]
tradingagents = "cli.main:app"

[tool.setuptools.packages.find]
include = ["tradingagents*", "cli*"]

[tool.setuptools.package-data]
cli = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: fast isolated unit tests",
    "integration: tests requiring external services",
    "smoke: quick sanity-check tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
